# aura

./: .bazelrc  .editorconfig  .gitignore  .golangci.yml  BUILD.bazel  WORKSPACE  go.mod  go.sum  workspace.bzl
examples/internal/helloworld/greeter_server/: BUILD.bazel  config.go  configfx.go  fx.go  main.go  server.go  serverfx.go
examples/internal/proto/: BUILD.bazel
examples/internal/proto/helloworld/: BUILD.bazel  helloworld.proto
go/cmd/: README.md
go/pkg/: README.md
go/pkg/aurafx/: BUILD.bazel  admin.go  config.go  debug.go  fx.go  fxlogger.go  healthcheck.go  metrics.go  tracing.go
go/pkg/cmd/: BUILD.bazel  cmd.go
go/pkg/config/: BUILD.bazel  config.go
go/pkg/corsx/: BUILD.bazel  config.go  fx.go
go/pkg/grpc/fx/: BUILD.bazel  grpc_gateway.go  grpc_server.go  register.go
go/pkg/grpc/middleware/: BUILD.bazel  grpc_gateway.go
go/pkg/httpx/: BUILD.bazel  fx.go
go/pkg/jwtx/: BUILD.bazel  jwt_service.go
go/pkg/logger/: BUILD.bazel  logger.go
go/pkg/otel/: BUILD.bazel  config.go  middleware.go  middleware_test.go  tracer.go  tracer_test.go
go/pkg/tracing/: BUILD.bazel  config.go  middleware.go  middleware_test.go  tracer.go  tracer_test.go
go/pkg/ulidx/: BUILD.bazel  ulid.go
go/services/: README.md
proto/: BUILD.bazel  README.md
