load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle_binary")

prefix = "github.com/zbiljic/aura"

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["@golink//gazelle/go_link:go_default_library"],
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/zbiljic/aura
gazelle(
    name = "gazelle",
    gazelle = "//:gazelle_binary",
)

# gazelle:go_naming_convention_external go_default_library

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# bazel run //:buildifier
buildifier(
    name = "buildifier",
)

load("@com_github_ash2k_bazel_tools//golangcilint:def.bzl", "golangcilint")
load("@com_github_ash2k_bazel_tools//goimports:def.bzl", "goimports")

# bazel run //:golangcilint
golangcilint(
    name = "golangcilint",
    config = "//:.golangci.yml",
    paths = [
        "./...",
    ],
    prefix = prefix,
)

# bazel run //:goimports
goimports(
    name = "goimports",
    display_diffs = True,
    prefix = prefix,
    write = False,
)
