load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "aurafx",
    srcs = [
        "admin.go",
        "config.go",
        "debug.go",
        "fx.go",
        "fxlogger.go",
        "healthcheck.go",
        "metrics.go",
        "tracing.go",
    ],
    importpath = "github.com/zbiljic/aura/go/pkg/aurafx",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/logger",
        "//go/pkg/otel",
        "@com_github_go_playground_validator_v10//:go_default_library",
        "@com_github_heptiolabs_healthcheck//:go_default_library",
        "@com_github_joho_godotenv//:go_default_library",
        "@com_github_kelseyhightower_envconfig//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@io_opentelemetry_go_otel_trace//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
