load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/zbiljic/aura/go/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_creasty_defaults//:go_default_library",
        "@com_github_go_playground_validator_v10//:go_default_library",
        "@com_github_joho_godotenv//:go_default_library",
        "@com_github_mitchellh_mapstructure//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
