load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "otel",
    srcs = [
        "config.go",
        "middleware.go",
        "tracer.go",
    ],
    importpath = "github.com/zbiljic/aura/go/pkg/otel",
    visibility = ["//visibility:public"],
    deps = [
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel//propagation:go_default_library",
        "@io_opentelemetry_go_otel//semconv/v1.10.0:go_default_library",
        "@io_opentelemetry_go_otel_exporters_jaeger//:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace//:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp//:go_default_library",
        "@io_opentelemetry_go_otel_exporters_stdout_stdouttrace//:go_default_library",
        "@io_opentelemetry_go_otel_exporters_zipkin//:go_default_library",
        "@io_opentelemetry_go_otel_sdk//resource:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
        "@io_opentelemetry_go_otel_trace//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "otel_test",
    srcs = [
        "middleware_test.go",
        "tracer_test.go",
    ],
    deps = [
        ":otel",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel//attribute:go_default_library",
        "@io_opentelemetry_go_otel//semconv/v1.10.0:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace/tracetest:go_default_library",
        "@io_opentelemetry_go_otel_trace//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
