load("@golink//proto:proto.bzl", "go_proto_link")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//examples:__subpackages__"],
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2/options:options_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "helloworld_go_proto",
    compilers = [
        "@com_github_grpc_ecosystem_grpc_gateway_v2//:go_apiv2",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//:go_grpc",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-grpc-gateway:go_gen_grpc_gateway",
    ],
    importpath = "github.com/zbiljic/aura/examples/internal/proto/helloworld",
    proto = ":helloworld_proto",
    visibility = ["//examples:__subpackages__"],
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2/options:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "helloworld",
    embed = [":helloworld_go_proto"],
    importpath = "github.com/zbiljic/aura/examples/internal/proto/helloworld",
    visibility = ["//examples:__subpackages__"],
)

go_proto_link(
    name = "helloworld_go_proto_link",
    dep = ":helloworld_go_proto",
    version = "v1",
)
