load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "fx",
    srcs = [
        "grpc_gateway.go",
        "grpc_server.go",
        "register.go",
    ],
    importpath = "github.com/zbiljic/aura/go/pkg/grpc/fx",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/grpc/middleware",
        "//go/pkg/tracing",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//recovery:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//tags:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//tracing/opentracing:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//validator:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
