load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = ["grpc_gateway.go"],
    importpath = "github.com/zbiljic/aura/go/pkg/grpc/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
    ],
)
