load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = ["grpc_gateway.go"],
    importpath = "github.com/zbiljic/aura/go/pkg/grpc/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
    ],
)
